[10] cpu widged, pdh, fix task manager start and other improvements
#10

--- a/zDrive/Properties/Resources.resx
+++ b/zDrive/Properties/Resources.resx
@@ -112,10 +112,10 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Size_bytes" xml:space="preserve">
     <value>байт</value>
@@ -182,5 +182,11 @@
   </data>
   <data name="InfoFormat_UsedMax" xml:space="preserve">
     <value>{4:F2}{5}/{0:F2}{1}</value>
+  </data>
+  <data name="CpuCheckbox_Text" xml:space="preserve">
+    <value>Процессор</value>
+  </data>
+  <data name="RamCheckbox_Text" xml:space="preserve">
+    <value>Озу</value>
   </data>
 </root>
