--- a/zDrive/Properties/Resources.en-US.resx
+++ b/zDrive/Properties/Resources.en-US.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -112,10 +112,10 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Size_bytes" xml:space="preserve">
     <value>byte</value>
@@ -182,5 +182,11 @@
   </data>
   <data name="InfoFormat_UsedMax" xml:space="preserve">
     <value>{4:F2}{5}/{0:F2}{1}</value>
+  </data>
+  <data name="CpuCheckbox_Text" xml:space="preserve">
+    <value>Cpu</value>
+  </data>
+  <data name="RamCheckbox_Text" xml:space="preserve">
+    <value>Ram</value>
   </data>
 </root>
